--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       POSTGRES_PASSWORD: test_password
       POSTGRES_DB: test_db
     ports:
-      - "5433:5432"
+      - "5434:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
     healthcheck:
@@ -17,68 +17,45 @@ services:
     networks:
       - app-network
 
-#   api:
-#     build:
-#       context: .
-#       dockerfile: Dockerfile
-#     environment:
-#       DB_HOST: postgres
-#       DB_PORT: 5432
-#       DB_USER: test_user
-#       DB_PASSWORD: test_password
-#       DB_NAME: test_db
-#       JWT_SECRET: "your_jwt_secret_key_here"
-#     ports:
-#       - "8080:8080"
-#     depends_on:
-#       postgres:
-#         condition: service_healthy
-#     restart: unless-stopped
-#     networks:
-#       - app-network
+  api:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    environment:
+      DB_HOST: postgres
+      DB_PORT: 5432
+      DB_USER: test_user
+      DB_PASSWORD: test_password
+      DB_NAME: test_db
+      JWT_SECRET: "your_jwt_secret_key_here"
+    ports:
+      - "8080:8080"
+    depends_on:
+      postgres:
+        condition: service_healthy
+    restart: unless-stopped
+    networks:
+      - app-network
 
-
-
-## тесты
-  # test_db:
-  #   image: postgres:15-alpine
-  #   environment:
-  #     POSTGRES_USER: test_user
-  #     POSTGRES_PASSWORD: test_password
-  #     POSTGRES_DB: test_db
-  #   ports:
-  #     - "5433:5432"
-  #   networks:
-  #     - test_network
-  #   healthcheck:
-  #     test: ["CMD-SHELL", "pg_isready -U test_user -d test_db"]
-  #     interval: 5s
-  #     timeout: 5s
-  #     retries: 5
-  # tests:
-  #   build:
-  #     context: .
-  #     dockerfile: Dockerfile.tests
-  #   depends_on:
-  #     test_db:
-  #       condition: service_healthy
-  #   networks:
-  #     - test_network
-  #   environment:
-  #     DB_HOST: test_db
-  #     DB_PORT: 5432
-  #     DB_USER: test_user
-  #     DB_PASSWORD: test_password
-  #     DB_NAME: test_db
-  #   volumes:
-  #     - ./coverage:/app/coverage
-  #   command: [
-  #       "go", "test", "-v",
-  #       "-cover",
-  #       "-coverprofile=/app/coverage/coverage.out",
-  #       "-coverpkg=github.com/taucuya/ppo/internal/repository/postgres/reps/...",
-  #       "./internal/repository/tests/..."
-  #     ]
+  tests:
+    build:
+      context: .
+      dockerfile: Dockerfile.tests
+    depends_on:
+      - api
+    networks:
+      - app-network
+    environment:
+      APP_URL: http://localhost:8080
+      DB_HOST: postgres
+      DB_PORT: 5432
+      DB_USER: test_user
+      DB_PASSWORD: test_password
+      DB_NAME: test_db
+    command: [
+        "sh", "-c",
+        "go test -v ./internal/e2e_tests/..."
+      ]
 
 networks:
   app-network:
